# LansweeperDataService

./: .example.env  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
src/: app.py
src/classes/: AIClient.py  database.py  lansweeper_database.py  service_database.py
src/config/: ai_config.py  lansweeper_db.py  logging_config.py  parameters.py  service_db.py
src/functions/: asset_is_server.py
src/logs/: app.log.2025-09-11
src/migrations/: env.py
src/migrations/versions/: 8d3af6a0cb08_initial.py
src/models/: lansweeper_models.py  service_models.py
src/routers/: host_router.py  sync_router.py
